test/ref.ruse
// fail

func main() int {
    var a int
    var b = &a
    &&a // error
    *a // error
    &(*b)
}
